# solar_panel_calc

./: .gitignore  CMakeLists.txt  README.md
program/: main.cpp
testrunner/: CMakeLists.txt  solar_panel_calc.cpp
